pub list label updates

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -100,7 +100,8 @@
   selected={true},
   bibtex_show={true},
   abbr={JLT},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{gao2025wise,
@@ -196,7 +197,8 @@
   category={conference},
   bibtex_show={true},
   abbr={MILCOM},
-  topic_primary={Wireless}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{vadlamani2025machine,
@@ -449,7 +451,8 @@
   category={conference},
   bibtex_show={true},
   abbr={OFC},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{wang2024multi,
@@ -473,7 +476,8 @@
   category={conference},
   bibtex_show={true},
   abbr={OFC},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{ip2024inline,
@@ -511,7 +515,8 @@
   category={journal},
   bibtex_show={true},
   abbr={JSSC},
-  topic_primary={Wireless}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{wang2024field,
@@ -529,7 +534,8 @@
   selected={true},
   bibtex_show={true},
   abbr={JLT},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @article{sun2024sok2,
@@ -559,7 +565,8 @@
   category={journal},
   bibtex_show={true},
   abbr={JOCN},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 
@@ -646,7 +653,8 @@
   category={conference},
   bibtex_show={true},
   abbr={OFC},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{raj2023digital,
@@ -670,6 +678,7 @@
   year={2023},
   publisher={Elsevier},
   category={journal},
+  bibtex_show={true},
   abbr={COMNET},
   topic_primary={Wireless},
   topic_secondary={Systems}
@@ -677,7 +686,7 @@
 
 @article{wang2023open,
   title={Open {EDFA} Gain Spectrum Dataset and Its Applications in Data-driven {EDFA} Gain Modeling},
-  author={Wang, Zehao and Kilper, Daniel C and Chen, Tingjun},
+  author={Wang, Zehao and Kilper, Dan and Chen, Tingjun},
   journal={IEEE/Optica Journal of Optical Communications and Networking},
   volume={15},
   number={9},
@@ -687,7 +696,7 @@
   category={journal},
   bibtex_show={true},
   abbr={JOCN},
-  topic_primary={Optic},
+  topic_primary={Optics},
   topic_secondary={AI/ML}
 }
 
@@ -702,7 +711,8 @@
   category={journal},
   bibtex_show={true},
   abbr={OFT},
-  topic_primary={Optics}
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{qi2023programmable,
@@ -790,7 +800,8 @@
   category={conference},
   bibtex_show={true},
   abbr={ISSCC},
-  topic_primary={Wireless}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{kohli2021open,
@@ -832,7 +843,8 @@
   category={journal},
   bibtex_show={true},
   abbr={OJ-COMS},
-  topic_primary={Wireless}
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{du2021directional,
@@ -871,7 +883,9 @@
   year={2020},
   category={conference},
   bibtex_show={true},
-  abbr={MobiCom}
+  abbr={MobiCom},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{garikapati2020performance,
@@ -881,7 +895,9 @@
   year={2020},
   category={conference},
   bibtex_show={true},
-  abbr={Asilomar}
+  abbr={Asilomar},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{nagulu2020full,
@@ -891,7 +907,9 @@
   year={2020},
   category={conference},
   bibtex_show={true},
-  abbr={RFIC}
+  abbr={RFIC},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{minakhmetov2020experiments,
@@ -901,7 +919,9 @@
   year={2020},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{yu2020dual,
@@ -911,7 +931,9 @@
   year={2020},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{nagulu2020nonmagnetic,
@@ -921,7 +943,9 @@
   year={2020},
   category={conference},
   bibtex_show={true},
-  abbr={ISSCC}
+  abbr={ISSCC},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{nagulu2020multi,
@@ -935,7 +959,9 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={JSSC}
+  abbr={JSSC},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{chen2020hybrid,
@@ -949,7 +975,8 @@
   publisher={IEEE/ACM},
   category={journal},
   bibtex_show={true},
-  abbr={TON}
+  abbr={TON},
+  topic_primary={Wireless}
 }
 
 @inproceedings{kohli2020open,
@@ -959,7 +986,9 @@
   year={2020},
   category={workshop},
   bibtex_show={true},
-  abbr={WiNTECH}
+  abbr={WiNTECH},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{chen2020thesis,
@@ -982,7 +1011,9 @@
   highlight={Student Research Competition (SRC) Winner - First Place},
   category={conference},
   bibtex_show={true},
-  abbr={MobiCom}
+  abbr={MobiCom},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{chen2019wideband2,
@@ -993,7 +1024,8 @@
   highlight={Best Paper Finalist},
   category={conference},
   bibtex_show={true},
-  abbr={MobiHoc}
+  abbr={MobiHoc},
+  topic_primary={Wireless}
 }
 
 @inproceedings{yu2019cosmos,
@@ -1003,7 +1035,9 @@
   year={2019},
   category={conference},
   bibtex_show={true},
-  abbr={OFC}
+  abbr={OFC},
+  topic_primary={Optics},
+  topic_secondary={Systems}
 }
 
 @inproceedings{nagulu2019full,
@@ -1013,7 +1047,9 @@
   year={2019},
   category={conference},
   bibtex_show={true},
-  abbr={AP-S/URSI}
+  abbr={AP-S/URSI},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{reiskarimian2019one,
@@ -1027,7 +1063,9 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={Microw. Mag.}
+  abbr={Microw. Mag.},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{chen201928,
@@ -1037,7 +1075,8 @@
   year={2019},
   category={workshop},
   bibtex_show={true},
-  abbr={mmNets}
+  abbr={mmNets},
+  topic_primary={Wireless}
 }
 
 @inproceedings{nagulu2019single,
@@ -1047,7 +1086,9 @@
   year={2019},
   category={workshop},
   bibtex_show={true},
-  abbr={ICC Workshop}
+  abbr={ICC Workshop},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 % 2018
@@ -1058,7 +1099,8 @@
   year={2018},
   category={conference},
   bibtex_show={true},
-  abbr={Asilomar}
+  abbr={Asilomar},
+  topic_primary={Wireless}
 }
 
 @inproceedings{chen2018hybrid,
@@ -1068,7 +1110,8 @@
   year={2018},
   category={conference},
   bibtex_show={true},
-  abbr={INFOCOM}
+  abbr={INFOCOM},
+  topic_primary={Wireless}
 }
 
 @inproceedings{dastjerdi2018full,
@@ -1078,7 +1121,9 @@
   year={2018},
   category={conference},
   bibtex_show={true},
-  abbr={RFIC}
+  abbr={RFIC},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{dastjerdi2018self,
@@ -1088,7 +1133,9 @@
   year={2018},
   category={conference},
   bibtex_show={true},
-  abbr={SPCOM}
+  abbr={SPCOM},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @article{chen2018maximizing,
@@ -1102,7 +1149,9 @@
   publisher={IEEE/ACM},
   category={journal},
   bibtex_show={true},
-  abbr={TON}
+  abbr={TON},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 % 2017
@@ -1117,7 +1166,9 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={Comm. Mag.}
+  abbr={Comm. Mag.},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{chen2017performance,
@@ -1127,7 +1178,8 @@
   year={2017},
   category={workshop},
   bibtex_show={true},
-  abbr={WCNC Workshop}
+  abbr={WCNC Workshop},
+  topic_primary={Wireless}
 }
 
 
@@ -1142,7 +1194,9 @@
   highlight={Best Paper Award},
   category={conference},
   bibtex_show={true},
-  abbr={CoNEXT}
+  abbr={CoNEXT},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{krishnaswamy2016full,
@@ -1152,7 +1206,9 @@
   year={2016},
   category={conference},
   bibtex_show={true},
-  abbr={Asilomar}
+  abbr={Asilomar},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
 }
 
 @inproceedings{margolies2016panda1,
@@ -1162,7 +1218,8 @@
   year={2016},
   category={conferenc},
   bibtex_show={true},
-  abbr={INFOCOM}
+  abbr={INFOCOM},
+  topic_primary={Wireless}
 }
 
 @article{margolies2016panda2,
@@ -1176,7 +1233,8 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={JSAC}
+  abbr={JSAC},
+  topic_primary={Wireless}
 }
 
 
@@ -1194,7 +1252,8 @@
   publisher={IEEE},
   category={journal},
   bibtex_show={true},
-  abbr={JSAC}
+  abbr={JSAC},
+  topic_primary={Wireless}
 }
 
 %%%%%%%%%%
@@ -1207,5 +1266,6 @@
   year={2014},
   category={conferenc},
   bibtex_show={true},
-  abbr={WiOpt}
+  abbr={WiOpt},
+  topic_primary={Wireless}
 }
