--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -32,20 +32,6 @@
   topic_secondary={Systems}
 }
 
-@article{gao2026disaggregated,
-  title={Disaggregated Machine Learning via In-Physics Computing at Radio Frequency},
-  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
-  journal={Science Advances},
-  year={2026},
-  publisher={American Association for the Advancement of Science},
-  category={journal},
-  selected={true},
-  bibtex_show={true},
-  abbr={Sci. Adv.},
-  topic_primary={AI/ML},
-  topic_secondary={Wireless}
-}
-
 @article{wang2026scalable,
   title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
@@ -73,6 +59,18 @@
   topic_primary={Wireless}
 }
 
+@inproceedings{qi2026decodex,
+  title={{DecodeX}: Exploring and Benchmarking of LDPC Decoding across CPU, GPU, and ASIC Platforms},
+  author={Qi, Zhenzhou and Yao, Yuncheng and Li, Yiming and Tung, Chung-Hsuan and Zheng, Junyao and Zhuo, Danyang and Chen, Tingjun},
+  booktitle={Proc. ACM Workshop on Mobile Computing Systems and Applications (HotMobile'26)},
+  year={2026},
+  category={workshop},
+  bibtex_show={true},
+  abbr={HotMobile},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
+}
+
 @inproceedings{eppink2026extending,
   title={Extending Permeable Fracture Imaging at Newberry to Depth: Added Receiver-Coverage Area and Seismic Velocity Control},
   author={Eppink, Jeffery and Malin, Peter and Mathews, Austin and Ontiveros, Hector and Stroujkova, Anastasia and Valenzuela, Sergio and Fleure, Tom and McLain, William and Paschall, Steve and Sicking, Charles and Bonneville, Alain and Chen, Tingjun and Wang, Zehao},
@@ -82,6 +80,20 @@
   bibtex_show={true},
   abbr={SGW},
   topic_primary={Optics}
+}
+
+@article{gao2026disaggregated,
+  title={Disaggregated Machine Learning via In-Physics Computing at Radio Frequency},
+  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
+  journal={Science Advances},
+  year={2026},
+  publisher={American Association for the Advancement of Science},
+  category={journal},
+  selected={true},
+  bibtex_show={true},
+  abbr={Sci. Adv.},
+  topic_primary={AI/ML},
+  topic_secondary={Wireless}
 }
 
 # 2025
