--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -32,31 +32,16 @@
   topic_secondary={Systems}
 }
 
-@article{wang2026scalable,
-  title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
-  author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
-  journal={IEEE/Optica Journal of Optical Communications and Networking},
+@inproceedings{wang2026coexistence,
+  title={Coexistence Field Trial of 1092 nm Quantum Link, Coherent 400 GbE, and 5G Services},
+  author={Wang, Zehao and Wu, Denton and Han, Mingzhe and Zalewski, Mika A. and Luiza Ferrari, Ana and Xie, Yuanheng and Linke, Norbert M. and Chen, Tingjun},
+  booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'26)},
   year={2026},
-  publisher={IEEE},
-  highlight={Invited Paper to the JOCN Special Issue on Invited/Top-Rated Papers from IEEE/Optica OFC'25},
-  category={journal},
-  selected={true},
+  category={conference},
   bibtex_show={true},
-  abbr={JOCN},
+  abbr={OFC},
   topic_primary={Optics},
-  topic_secondary={AI/ML}
-}
-
-@article{Promponas2025on,
-  title={On the Optimization and Stability of Sectorized Wireless Networks},
-  author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
-  journal={IEEE/ACM Transactions on Networking (to appear)},
-  year={2026},
-  publisher={IEEE/ACM},
-  category={journal},
-  bibtex_show={true},
-  abbr={TON},
-  topic_primary={Wireless}
+  topic_secondary={Systems}
 }
 
 @inproceedings{qi2026decodex,
@@ -82,6 +67,24 @@
   topic_primary={Optics}
 }
 
+@article{wang2026scalable,
+  title={Scalable ML Models and Cascaded Learning for Efficient Multi-Span OSNR and GSNR Prediction},
+  author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
+  journal={IEEE/Optica Journal of Optical Communications and Networking},
+  volume={18},
+  number={1},
+  pages={A88--A99},
+  year={2026},
+  publisher={IEEE},
+  highlight={Invited Paper to the JOCN Special Issue on Invited/Top-Rated Papers from IEEE/Optica OFC'25},
+  category={journal},
+  selected={true},
+  bibtex_show={true},
+  abbr={JOCN},
+  topic_primary={Optics},
+  topic_secondary={AI/ML}
+}
+
 @article{gao2026disaggregated,
   title={Disaggregated Machine Learning via In-Physics Computing at Radio Frequency},
   author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
@@ -97,6 +100,23 @@
 }
 
 # 2025
+
+@article{Promponas2025on,
+  title={On the Optimization and Stability of Sectorized Wireless Networks},
+  author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={33},
+  number={6},
+  pages={3228--3243},
+  year={2025},
+  publisher={IEEE/ACM},
+  doi={10.1109/TON.2025.3583267},
+  category={journal},
+  bibtex_show={true},
+  abbr={TON},
+  topic_primary={Wireless}
+}
+
 @article{sasai2025optical,
   title={Optical Link Tomography: First Field Trial and 4D Extension},
   author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Takahashi, Minami and Matsumura, Tatsuya and Nakamura, Masanori and others},
@@ -153,7 +173,7 @@
 }
 
 @inproceedings{hunt2025ragnnarok,
-  title={RaGNNarok: A Light-Weight Graph Neural Network for Enhancing Radar Point Clouds on Unmanned Ground Vehicles},
+  title={{RaGNNarok}: A Light-Weight Graph Neural Network for Enhancing Radar Point Clouds on Unmanned Ground Vehicles},
   author={Hunt, David and Luo, Shaocheng and Hallyburton, Robert and Li, Yi and Nillongo, Shafii and Chen, Tingjun and Pajic, Miroslav},
   booktitle={Proc. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'25)},
   year={2025},
@@ -246,6 +266,7 @@
   pages={4377--4391},
   year={2025},
   publisher={IEEE},
+  doi={10.1109/TWC.2025.3533954},
   category={journal},
   bibtex_show={true},
   abbr={TWC},
@@ -257,6 +278,7 @@
   author={Li, Yiming and Gao, Zhihui and Palathinkal, Joshua and Ghosh, Monisha and Chen, Tingjun},
   booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'25)},
   year={2025},
+  doi={10.1109/DySPAN64764.2025.11115962},
   code={https://github.com/functions-lab/geo2sigmap},
   category={conference},
   bibtex_show={true},
@@ -270,6 +292,7 @@
   author={Xie, Shuang and Raj, Rishu and Briantcev, Dmitrii and Wang, Zehao and Chen, Tingjun and Kilper Dan},
   booktitle={Proc. IEEE/IFIP International Conference on Optical Network Design and Modeling (ONDM'25)},
   year={2025},
+  doi={10.23919/ONDM65745.2025.11029356},
   category={conference},
   bibtex_show={true},
   abbr={ONDM},
@@ -294,6 +317,7 @@
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'25) (invited)},
   year={2025},
+  doi={10.1364/OFC.2025.M1J.3},
   category={conference},
   bibtex_show={true},
   abbr={OFC},
@@ -306,6 +330,7 @@
   author={Wang, Zehao and Borraccini, Giacomo and D'Amico, Andrea and Huang, Yue-Kai and Wang, Ting and Kilper, Dan and Asahi, Koji and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'25)},
   year={2025},
+  doi={10.1364/OFC.2025.Tu3I.6},
   category={conference},
   bibtex_show={true},
   abbr={OFC},
