--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -89,6 +89,9 @@
   title={Disaggregated Machine Learning via In-Physics Computing at Radio Frequency},
   author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
   journal={Science Advances},
+  volume={12},
+  number={2},
+  pages={eadz0817},
   year={2026},
   publisher={American Association for the Advancement of Science},
   category={journal},
