main project page updates

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -19,6 +19,18 @@
   topic_secondary={Systems}
 }
 
+@inproceedings{gao2025chameleon,
+  title={Chameleon: Integrated Sensing and Communication with Sub-Symbol Beam Switching in mmWave Networks},
+  author={Gao, Zhihui and Liu, Zhecun and Chen, Tingjun},
+  booktitle={Proc. IEEE MTT-S RF Systems \& Applications Symposium  (RFSA'26)},
+  year={2026},
+  category={conference},
+  bibtex_show={true},
+  abbr={IMS},
+  topic_primary={Wireless},
+  topic_secondary={Systems}
+}
+
 @inproceedings{qin2026gpusynth,
   title={{Phantora}: Maximizing Code Reuse in Simulation-based Machine Learning System Performance Estimation},
   author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Yuan, Tianjun and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R. and Zhuo, Danyang},
@@ -104,7 +116,7 @@
 
 # 2025
 
-@article{Promponas2025on,
+@article{promponas2025on,
   title={On the Optimization and Stability of Sectorized Wireless Networks},
   author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
   journal={IEEE/ACM Transactions on Networking},
