added rfsa lable

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -26,7 +26,7 @@
   year={2026},
   category={conference},
   bibtex_show={true},
-  abbr={IMS},
+  abbr={RFSA},
   topic_primary={Wireless},
   topic_secondary={Systems}
 }
