--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -31,6 +31,18 @@
   topic_secondary={Systems}
 }
 
+@inproceedings{hunt2026uavsar,
+  title={{UAV-SAR}: Simultaneous Radar-Based Odometry and Synthetic-Array Sensing for Unmanned Aerial Vehicles},
+  author={Hunt, David and Luo, Shaocheng and Rivera, Samuel and Prakash, Aarav and Morris, Cameron and Chen, Tingjun and Pajic, Miroslav},
+  booktitle={Proc. IEEE International Conference on Robotics and Automation (ICRA'26)},
+  year={2026},
+  category={conference},
+  bibtex_show={true},
+  abbr={ICRA},
+  topic_primary={Wireless},
+  topic_secondary={AI/ML}
+}
+
 @inproceedings{qin2026gpusynth,
   title={{Phantora}: Maximizing Code Reuse in Simulation-based Machine Learning System Performance Estimation},
   author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Yuan, Tianjun and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R. and Zhuo, Danyang},
@@ -50,6 +62,7 @@
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'26)},
   year={2026},
   category={conference},
+  selected={true},
   bibtex_show={true},
   abbr={OFC},
   topic_primary={Optics},
